--- a/product_configurator_mrp_quantity/views/product_config_view.xml
+++ b/product_configurator_mrp_quantity/views/product_config_view.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record id="product_config_session_form_view_form_is_qty_required" model="ir.ui.view">
+    <record
+        id="product_config_session_form_view_form_is_qty_required"
+        model="ir.ui.view"
+    >
         <field name="name">product.config.session.form</field>
         <field name="model">product.config.session</field>
-        <field name="inherit_id" ref="product_configurator.product_config_session_form_view"/>
+        <field
+            name="inherit_id"
+            ref="product_configurator.product_config_session_form_view"
+        />
         <field name="arch" type="xml">
             <xpath expr="//page[@name='custom_vals']" position="after">
                 <page string="Attribute Qty">
                     <field name="session_value_quantity_ids">
                         <tree editable="bottom">
-                            <field name="attr_value_id"/>
-                            <field name="qty"/>
+                            <field name="attr_value_id" />
+                            <field name="qty" />
                         </tree>
                     </field>
                 </page>
