--- a/product_configurator_mrp_quantity/wizard/product_configurator_view.xml
+++ b/product_configurator_mrp_quantity/wizard/product_configurator_view.xml
@@ -7,7 +7,10 @@
         <field name="model">product.configurator</field>
         <field name="inherit_id" ref="product_configurator.product_configurator_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='attribute_line_ids']//tree//field[@name='multi']" position="after">
+            <xpath
+                expr="//field[@name='attribute_line_ids']//tree//field[@name='multi']"
+                position="after"
+            >
                 <field name="is_qty_required" />
             </xpath>
         </field>
