[FIX] sale_isolated_quote
Pulled from OCA PR https://github.com/OCA/sale-workflow/pull/3141

--- a/sale_isolated_quotation/views/sale_views.xml
+++ b/sale_isolated_quotation/views/sale_views.xml
@@ -12,22 +12,19 @@
                 >not context.get('order_sequence', False)</attribute>
             </xpath>
             <xpath expr="/form/header" position="after">
-                <header
-                    name="quotation"
-                    invisible="order_sequence"
-                >
+                <header name="quotation" invisible="order_sequence == True">
                     <button
                         name="action_convert_to_order"
-                        invisible="state not in ('draft','sent')"
                         class="oe_highlight"
                         type="object"
                         string="Convert to Order"
+                        invisible="state not in ['draft', 'sent']"
                     />
                     <button
                         name="action_cancel"
-                        invisible="state not in ('draft','sent')"
                         type="object"
                         string="Cancel"
+                        invisible="state not in ['draft', 'sent']"
                     />
                     <field
                         name="quotation_state"
@@ -38,15 +35,15 @@
                 </header>
             </xpath>
             <field name="partner_shipping_id" position="after">
-                <field name="order_sequence" invisible="True" />
+                <field name="order_sequence" invisible="1" />
                 <field
                     name="quote_id"
-                    invisible="not order_sequence"
+                    invisible="order_sequence == False"
                     context="{'order_sequence': False}"
                 />
                 <field
                     name="order_id"
-                    invisible="order_sequence"
+                    invisible="order_sequence == True"
                     context="{'order_sequence': True}"
                 />
             </field>
@@ -62,7 +59,7 @@
     <record id="sale.action_quotations_with_onboarding" model="ir.actions.act_window">
         <field
             name="context"
-        >{'default_order_sequence': False, 'order_sequence': False}</field>
+        >{'default_order_sequence': False, 'order_sequence': False, 'search_default_my_quotation': 1}</field>
         <field name="domain">[('order_sequence', '=', False)]</field>
     </record>
     <record id="sale.action_orders" model="ir.actions.act_window">
@@ -80,7 +77,7 @@
         />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='keep_name_so']/../.." position="attributes">
-                <attribute name="invisible">True</attribute>
+                <attribute name="invisible">1</attribute>
             </xpath>
         </field>
     </record>
