--- a/ol_product_pricing_review/views/product_product_views.xml
+++ b/ol_product_pricing_review/views/product_product_views.xml
@@ -14,6 +14,7 @@
             </xpath>
             <xpath expr="//header" position="inside">
                 <field name="disable_price_reviews" invisible="1" />
+                <field name="has_configurable_attributes" invisible="1" />
                 <button string="Price Review" type="object" name="action_price_review" invisible="disable_price_reviews or has_configurable_attributes" />
             </xpath>
         </field>
