--- a/ol_product_pricing_review/views/product_template_views.xml
+++ b/ol_product_pricing_review/views/product_template_views.xml
@@ -55,13 +55,21 @@
                     </group>
                 </page>
             </xpath>
+            <field name="list_price" position="attributes" >
+                <attribute name="readonly">1</attribute>
+            </field>
+            <field name="standard_price" position="attributes" >
+                <attribute name="readonly">1</attribute>
+            </field>
             <field name="based_on" position="before">
-                <xpath expr="//label[@for='list_price']" position="move" />
-                <xpath expr="//div[@name='pricing']" position="move" />
+                <label for="list_price"/>
+                <div name="pricing" class="o_row">
+                    <field name="list_price" readonly="1" class="oe_inline" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"/>
+                </div>
                 <label for="standard_price" invisible="product_variant_count &gt; 1 and not is_product_variant" />
                 <div name="standard_price_uom" invisible="product_variant_count &gt; 1 and not is_product_variant">
                     <field name="standard_price" readonly="1" class="oe_inline" widget="monetary" options="{'currency_field': 'cost_currency_id', 'field_digits': True}" />
-                    <span groups="uom.group_uom">per
+                    <span groups="uom.group_uom"> per
                         <field name="uom_name" class="oe_inline"/>
                     </span>
                 </div>
